new designs of dialogs and made responsive

--- a/app/src/main/res/layout/dialog_chooseloc.xml
+++ b/app/src/main/res/layout/dialog_chooseloc.xml
@@ -1,95 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
   <RelativeLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">
-    <RelativeLayout
-      android:id="@+id/solidcolorrel2"
-      android:layout_width="match_parent"
-      android:layout_height="70dp"
-      android:background="@color/pearl_white">
-        <ImageView
-          android:layout_width="50dp"
-           android:layout_height="50dp"
-           android:layout_centerHorizontal="true"
-           android:layout_centerVertical="true"
-           android:background="@drawable/emer" />
-    </RelativeLayout>
+
+      <RelativeLayout
+          android:id="@+id/solidcolorrel2"
+          android:layout_width="match_parent"
+          android:layout_height="70dp"
+          android:background="@color/pearl_white">
+
+          <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/emer" />
+
+      </RelativeLayout>
+
         <RelativeLayout
             android:id="@+id/rellseems"
             android:layout_below="@+id/solidcolorrel2"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="15dp"
-            android:layout_marginEnd="3dp"
-            android:layout_marginStart="3dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp">
+
             <TextView
-              android:id="@+id/please_choose"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text="It seems your photo don't have a location tagged. Please choose a location"
-              android:layout_centerHorizontal="true"
-              android:gravity="center"
-              android:layout_marginTop="10dp"
-              android:fontFamily="sans-serif-condensed"
-              android:layout_marginBottom="10dp"
-              android:textSize="16sp"
-              android:textColor="@color/black"
-            />
+                android:id="@+id/please_choose"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="The photo selected has no location tagged! Please choose location "
+                android:layout_centerHorizontal="true"
+                android:gravity="center"
+                android:fontFamily="sans-serif-condensed"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
+
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/relcurrentloc"
             android:layout_below="@+id/rellseems"
-            android:layout_centerHorizontal="true"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content">
-            <ImageView
-              android:id="@+id/current_locimg"
-              android:layout_toLeftOf="@id/current_location"
-              android:layout_width="15dp"
-              android:layout_height="15dp"
-              android:layout_marginTop="5dp"
-              android:layout_marginEnd="23dp"
-              android:src="@drawable/ic_currentloc1" />
-            <TextView
-              android:id="@+id/current_location"
-              android:clickable="true"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text="Current Location"
-              android:layout_centerHorizontal="true"
-              android:textColor="@drawable/text_changecolor"
-              android:textSize="18sp"
-              android:fontFamily="sans-serif-condensed"
-              android:layout_marginBottom="10dp"/>
-            <ImageView
-                android:id="@+id/search_locimg"
-                android:layout_below="@+id/current_location"
-                android:layout_toLeftOf="@+id/search_location"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="8dp"
-                android:src="@drawable/ic_searchloc1" />
-            <TextView
-                android:id="@+id/search_location"
-                android:layout_below="@+id/current_location"
-                android:clickable="true"
-                android:layout_width="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp">
+
+            <RelativeLayout
+                android:id="@+id/current_rel"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Search for a location"
-                android:layout_centerHorizontal="true"
-                android:fontFamily="sans-serif-condensed"
-                android:textColor="@drawable/text_changecolor"
-                android:textSize="18sp"
-                android:layout_marginBottom="10dp"/>
+                android:padding="10dp">
+
+                <ImageView
+                    android:id="@+id/current_locimg"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="20dp"
+                    android:layout_centerVertical="true"
+                    android:src="@mipmap/ic_current_location" />
+
+                <TextView
+                    android:id="@+id/current_location"
+                    android:clickable="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Current Location"
+                    android:textColor="@drawable/text_changecolor"
+                    android:textSize="22sp"
+                    android:layout_toEndOf="@+id/current_locimg"
+                    android:layout_marginStart="20dp"
+                    android:layout_centerVertical="true"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/search_rel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/current_rel"
+                android:padding="10dp">
+
+                <ImageView
+                    android:id="@+id/search_locimg"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="20dp"
+                    android:src="@mipmap/ic_search_location" />
+
+                <TextView
+                    android:id="@+id/search_location"
+                    android:clickable="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Search for a location"
+                    android:textColor="@drawable/text_changecolor"
+                    android:textSize="22sp"
+                    android:layout_toEndOf="@+id/search_locimg"
+                    android:layout_marginStart="20dp"
+                    android:layout_centerVertical="true"/>
+
+            </RelativeLayout>
+
         </RelativeLayout>
+
   </RelativeLayout>
+
 </RelativeLayout>
 
 
