--- a/app/src/main/res/layout/dialog_post.xml
+++ b/app/src/main/res/layout/dialog_post.xml
@@ -1,94 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
 
+    <RelativeLayout
+        android:id="@+id/rell2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <RelativeLayout
-            android:id="@+id/rell2"
+            android:id="@+id/solidcolorrel"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <RelativeLayout
-                android:id="@+id/solidcolorrel"
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:background="@color/pearl_white">
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:background="@drawable/emer" />
-            </RelativeLayout>
+            android:layout_height="70dp"
+            android:background="@color/pearl_white">
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/emer" />
+        </RelativeLayout>
 
 
-            <RelativeLayout
-                android:layout_marginTop="15dp"
-                android:layout_marginBottom="15dp"
+        <RelativeLayout
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/solidcolorrel">
+
+            <TextView
+                android:id="@+id/kindofpost"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/solidcolorrel">
+                android:text="Please choose what type of post"
+                android:layout_centerHorizontal="true"
+                android:gravity="center_horizontal"
+                android:fontFamily="sans-serif-condensed"
+                android:layout_marginBottom="20dp"
+                android:textSize="25sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"/>
 
-                <TextView
-                    android:id="@+id/kindofpost"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="What kind of post?"
-                    android:layout_centerHorizontal="true"
-                    android:gravity="center_horizontal"
-                    android:fontFamily="sans-serif-condensed"
-                    android:layout_marginBottom="10dp"
-                    android:textSize="20sp"
-                    android:textColor="@color/black" />
+            <RelativeLayout
+                android:id="@+id/normal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/kindofpost"
+                android:layout_marginBottom="10dp"
+                android:padding="10dp">
 
                 <ImageView
-                    android:layout_below="@+id/kindofpost"
-                    android:layout_width="15dp"
-                    android:layout_height="15dp"
-                    android:layout_marginEnd="22dp"
-                    android:layout_marginTop="5dp"
+                    android:id="@+id/ic_normal"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:layout_centerVertical="true"
-                    android:layout_toStartOf="@+id/normal_post"
-                    android:layout_marginRight="0dp"
-                    android:src="@drawable/ic_normalpost1"/>
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="20dp"
+                    android:src="@mipmap/ic_normal_post"/>
 
                 <TextView
                     android:id="@+id/normal_post"
-                    android:layout_below="@+id/kindofpost"
                     android:clickable="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-condensed"
-                    android:layout_centerHorizontal="true"
                     android:text="Normal"
                     android:textColor="@drawable/text_changecolor"
-                    android:textSize="18sp"/>
+                    android:textSize="22sp"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@id/ic_normal"
+                    android:layout_marginStart="20dp"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/emergency"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/normal"
+                android:padding="10dp">
 
                 <ImageView
                     android:id="@+id/emergency_icon"
-                    android:layout_below="@+id/normal_post"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginEnd="10dp"
-                    android:layout_width="15dp"
-                    android:layout_height="15dp"
-                    android:layout_toStartOf="@id/emergency_post"
-                    android:src="@drawable/ic_emerdialog1"/>
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@mipmap/emergency_icon"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="20dp"/>
 
                 <TextView
                     android:id="@+id/emergency_post"
-                    android:layout_below="@+id/normal_post"
                     android:clickable="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-condensed"
-                    android:textSize="18sp"
+                    android:textSize="22sp"
                     android:textColor="@drawable/text_changecolor"
-                    android:layout_marginTop="10dp"
-                    android:layout_centerHorizontal="true"
-                    android:text="Emergency"/>
+                    android:text="Emergency"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@id/emergency_icon"
+                    android:layout_marginStart="20dp"/>
 
             </RelativeLayout>
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
