--- a/app/src/main/res/layout/fragment_signout.xml
+++ b/app/src/main/res/layout/fragment_signout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="250dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <RelativeLayout
@@ -30,21 +30,24 @@
             android:textSize="20sp"
             android:textColor="@color/black"
             android:id="@+id/tvConfirmSignout"
-            android:text="You are leaving Emercify!"
+            android:text="You are leaving Emercify!
+We hope to see you again!"
             android:textAlignment="center"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="15dp"
+            android:textStyle="bold"/>
         
         <Button
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="35dp"
             android:text="Sign Out"
+            android:textColor="@color/white"
             android:layout_centerHorizontal="true"
             android:textSize="14sp"
             android:id="@+id/btnConfirmSignout"
             android:layout_below="@+id/tvConfirmSignout"
             android:background="@drawable/rounded_border_blue"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="10dp"/>
 
     </RelativeLayout>
