--- a/app/src/main/res/layout/view_delete_dialog.xml
+++ b/app/src/main/res/layout/view_delete_dialog.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <RelativeLayout
@@ -24,70 +24,93 @@
         android:id="@+id/reldialog1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <ImageView
-            android:layout_marginTop="5dp"
-            android:id="@+id/view_image"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_toStartOf="@id/view_text"
-            android:layout_marginRight="11dp"
-            android:background="@drawable/ic_viewdialog1"/>
-        <TextView
-            android:id="@+id/view_text"
-            android:clickable="true"
-            android:layout_width="wrap_content"
+
+        <RelativeLayout
+            android:id="@+id/viewrel"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textColor="@drawable/text_changecolor"
-            android:layout_centerHorizontal="true"
-            android:fontFamily="sans-serif-condensed"
-            android:text="View"/>
+            android:padding="10dp">
 
+            <ImageView
+                android:id="@+id/view_image"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="20dp"
+                android:background="@mipmap/ic_view_post"/>
+            <TextView
+                android:id="@+id/view_text"
+                android:clickable="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="22sp"
+                android:layout_toEndOf="@+id/view_image"
+                android:layout_marginStart="20dp"
+                android:textColor="@drawable/text_changecolor"
+                android:fontFamily="sans-serif-condensed"
+                android:text="View"/>
+        </RelativeLayout>
 
-        <ImageView
-            android:id="@+id/ic_download"
-            android:layout_below="@id/view_text"
-            android:layout_marginTop="15dp"
-            android:layout_width="15dp"
-            android:layout_height="15dp"
-            android:layout_toStartOf="@id/download_text"
-            android:layout_marginRight="5dp"
-            android:background="@drawable/ic_reportdialog1"/>
-        <TextView
-            android:id="@+id/download_text"
-            android:layout_below="@+id/view_text"
-            android:clickable="true"
-            android:layout_marginTop="10dp"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/savephotorel"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-condensed"
-            android:textSize="18sp"
-            android:layout_centerHorizontal="true"
-            android:textColor="@drawable/text_changecolor"
-            android:text="Save Photo" />
+            android:layout_below="@+id/viewrel"
+            android:padding="10dp">
 
+            <ImageView
+                android:id="@+id/ic_download"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="20dp"
+                android:layout_alignParentStart="true"
+                android:background="@mipmap/ic_save_image"/>
+            <TextView
+                android:id="@+id/download_text"
+                android:clickable="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed"
+                android:textSize="22sp"
+                android:layout_marginStart="20dp"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/ic_download"
+                android:textColor="@drawable/text_changecolor"
+                android:text="Save Photo" />
+        </RelativeLayout>
 
-         <ImageView
-             android:id="@+id/ic_delete"
-             android:layout_below="@+id/download_text"
-             android:layout_marginTop="15dp"
-             android:layout_width="15dp"
-             android:layout_height="15dp"
-             android:layout_toStartOf="@id/delete_text"
-             android:layout_marginRight="6dp"
-             android:background="@drawable/ic_deletedialog1"/>
-         <TextView
-             android:id="@+id/delete_text"
-             android:layout_below="@id/download_text"
-             android:clickable="true"
-             android:layout_marginTop="10dp"
-             android:textColor="@drawable/text_changecolor"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:fontFamily="sans-serif-condensed"
-             android:layout_centerHorizontal="true"
-             android:textSize="18sp"
-             android:text="Delete" />
+        <RelativeLayout
+            android:id="@+id/deleterel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/savephotorel"
+            android:padding="10dp">
+
+            <ImageView
+                android:id="@+id/ic_delete"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="20dp"
+                android:layout_centerVertical="true"
+                android:background="@mipmap/ic_delete_post"/>
+            <TextView
+                android:id="@+id/delete_text"
+                android:clickable="true"
+                android:textColor="@drawable/text_changecolor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-condensed"
+                android:textSize="22sp"
+                android:layout_marginStart="20dp"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/ic_delete"
+                android:text="Delete"/>
+
+        </RelativeLayout>
 
      </RelativeLayout>
+
 </RelativeLayout>
