--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name ="notseen">#ecf7f9</color>
     <color name ="green">#00b300</color>
     <color name ="comment_box_color">#f2f2f2</color>
+    <color name ="gmail_color">#c71610</color>
+    <color name ="facebook_color">#3b5998</color>
 </resources>
