--- a/app/src/main/res/layout/dialog_post.xml
+++ b/app/src/main/res/layout/dialog_post.xml
@@ -40,8 +40,7 @@
                 android:fontFamily="sans-serif-condensed"
                 android:layout_marginBottom="20dp"
                 android:textSize="25sp"
-                android:textColor="@color/black"
-                android:textStyle="bold"/>
+                android:textColor="@color/black"/>
 
             <RelativeLayout
                 android:id="@+id/normal"
