--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -18,8 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rellayout1"
-        android:id="@+id/rellayout2"
-        android:layout_marginBottom="50dp">
+        android:id="@+id/rellayout2">
 
         <include layout="@layout/layout_center_profile" />
 
