--- a/app/src/main/res/layout/snippet_center_editprofile.xml
+++ b/app/src/main/res/layout/snippet_center_editprofile.xml
@@ -16,7 +16,7 @@
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="30dp"
                 app:civ_border_color="@color/black"
                 app:civ_border_width="2dp" />
 
@@ -40,19 +40,23 @@
                 android:background="@drawable/grey_border_bottom">
 
                 <ImageView
+                    android:id="@+id/ic_username"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:src="@drawable/ic_username" />
+                    android:src="@drawable/ic_username"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true"/>
 
                 <EditText
                     android:id="@+id/username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginStart="40dp"
                     android:background="@null"
                     android:hint="Username"
-                    android:inputType="textNoSuggestions" />
+                    android:inputType="textNoSuggestions"
+                    android:layout_toEndOf="@id/ic_username"
+                    android:layout_marginStart="10dp"/>
 
             </RelativeLayout>
 
@@ -65,19 +69,23 @@
                 android:background="@drawable/grey_border_bottom">
 
                 <ImageView
+                    android:id="@+id/ic_display_name"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
-                    android:src="@drawable/ic_display_name" />
+                    android:src="@drawable/ic_display_name"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true"/>
 
                 <EditText
                     android:id="@+id/display_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginStart="40dp"
                     android:background="@null"
                     android:hint="Display Name"
-                    android:inputType="textNoSuggestions" />
+                    android:inputType="textNoSuggestions"
+                    android:layout_toEndOf="@id/ic_display_name"
+                    android:layout_marginStart="10dp"/>
 
             </RelativeLayout>
 
@@ -90,19 +98,22 @@
                 android:background="@drawable/grey_border_bottom">
 
                 <ImageView
+                    android:id="@+id/ic_website"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
-                    android:src="@drawable/ic_web" />
+                    android:src="@drawable/ic_web"
+                    android:layout_centerVertical="true"/>
 
                 <EditText
                     android:id="@+id/website"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginStart="40dp"
                     android:background="@null"
                     android:hint="Website"
-                    android:inputType="textNoSuggestions" />
+                    android:inputType="textNoSuggestions"
+                    android:layout_toEndOf="@id/ic_website"
+                    android:layout_marginStart="10dp"/>
 
             </RelativeLayout>
 
@@ -115,19 +126,23 @@
                 android:background="@drawable/grey_border_bottom">
 
                 <ImageView
+                    android:id="@+id/ic_description"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
-                    android:src="@drawable/ic_description" />
+                    android:src="@drawable/ic_description"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"/>
 
                 <EditText
                     android:id="@+id/description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginStart="40dp"
                     android:background="@null"
                     android:hint="Description"
-                    android:inputType="textNoSuggestions" />
+                    android:inputType="textNoSuggestions"
+                    android:layout_toEndOf="@id/ic_description"
+                    android:layout_marginStart="10dp"/>
 
             </RelativeLayout>
 
@@ -152,20 +167,24 @@
                 android:background="@drawable/grey_border_bottom">
 
                 <ImageView
+                    android:id="@+id/ic_email"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
-                    android:src="@drawable/ic_email" />
+                    android:src="@drawable/ic_email"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true"/>
 
                 <EditText
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginStart="40dp"
                     android:background="@null"
                     android:editable="false"
                     android:hint="Email"
-                    android:inputType="none" />
+                    android:inputType="none"
+                    android:layout_toEndOf="@+id/ic_email"
+                    android:layout_marginStart="10dp"/>
             </RelativeLayout>
 
             <RelativeLayout
@@ -177,19 +196,23 @@
                 android:background="@drawable/grey_border_bottom">
 
                 <ImageView
+                    android:id="@+id/ic_phone"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
-                    android:src="@drawable/ic_phone" />
+                    android:src="@drawable/ic_phone"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"/>
 
                 <EditText
                     android:id="@+id/phoneNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginStart="40dp"
                     android:background="@null"
-                    android:hint="phoneNumber"
-                    android:inputType="textNoSuggestions" />
+                    android:hint="Phone Number"
+                    android:inputType="textNoSuggestions"
+                    android:layout_toEndOf="@+id/ic_phone"
+                    android:layout_marginStart="10dp"/>
             </RelativeLayout>
 
         </RelativeLayout>
