--- a/app/src/main/res/layout/layout_center_view_profile.xml
+++ b/app/src/main/res/layout/layout_center_view_profile.xml
@@ -105,14 +105,13 @@
                         android:id="@+id/legitcount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="5"
+                        android:text="0"
                         android:textColor="@color/white"
                         android:textSize="12sp"
                         android:textStyle="bold"
                         android:layout_centerVertical="true"
                         android:gravity="center"
-                        android:background="@drawable/legit_shape"
-                        android:visibility="gone"/>
+                        android:background="@drawable/legit_shape"/>
 
                     <TextView
                         android:id="@+id/fakecount"
@@ -120,14 +119,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
-                        android:text="5"
+                        android:text="0"
                         android:textColor="@color/white"
                         android:textSize="12sp"
                         android:textStyle="bold"
                         android:layout_centerVertical="true"
                         android:gravity="center"
-                        android:background="@drawable/fake_shape"
-                        android:visibility="gone"/>
+                        android:background="@drawable/fake_shape"/>
 
                 </RelativeLayout>
 
