--- a/app/src/main/res/layout/fragment_signout.xml
+++ b/app/src/main/res/layout/fragment_signout.xml
@@ -34,8 +34,7 @@
 We hope to see you again!"
             android:textAlignment="center"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
-            android:textStyle="bold"/>
+            android:layout_marginTop="15dp"/>
         
         <Button
             android:layout_width="wrap_content"
