--- a/app/src/main/res/layout/layout_center_profile.xml
+++ b/app/src/main/res/layout/layout_center_profile.xml
@@ -118,9 +118,9 @@
                                 android:id="@+id/legitcount"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="5"
+                                android:text=""
                                 android:textColor="@color/white"
-                                android:textSize="12sp"
+                                android:textSize="16sp"
                                 android:textStyle="bold"
                                 android:layout_centerVertical="true"
                                 android:gravity="center"
@@ -133,9 +133,9 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="5dp"
-                                android:text="5"
+                                android:text=""
                                 android:textColor="@color/white"
-                                android:textSize="12sp"
+                                android:textSize="16sp"
                                 android:textStyle="bold"
                                 android:layout_centerVertical="true"
                                 android:gravity="center"
