--- a/app/src/main/res/layout/layout_view_post.xml
+++ b/app/src/main/res/layout/layout_view_post.xml
@@ -157,7 +157,7 @@
                     android:text="FAKE"
                     android:textColor="@color/white"
                     android:textStyle="bold"
-                    android:textSize="14sp"
+                    android:textSize="16sp"
                     android:visibility="gone" />
 
                 <Button
@@ -172,8 +172,17 @@
                     android:text="REAL"
                     android:textColor="@color/white"
                     android:textStyle="bold"
-                    android:textSize="14sp"
-                    android:visibility="gone" />
+                    android:textSize="16sp"
+                    android:visibility="gone"/>
+
+                <ImageView
+                    android:id="@+id/respondents"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:src="@mipmap/ic_respondents"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/shadow_border"/>
 
             </RelativeLayout>
 
@@ -192,7 +201,7 @@
                     android:layout_height="wrap_content"
                     android:text="Liked By"
                     android:textColor="@color/black"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"/>
 
                 <TextView
                     android:id="@+id/image_caption"
