--- a/app/src/main/res/layout/dialog_confirm_password.xml
+++ b/app/src/main/res/layout/dialog_confirm_password.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Confirm Password"
+        android:text="Please Enter the Status"
         android:textSize="21sp"
         android:textStyle="bold"
         android:textColor="@color/black"
@@ -17,9 +17,9 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Password"
+        android:hint="Status"
         android:id="@+id/confirm_password"
-        android:inputType="textPassword"
+        android:inputType="text"
         android:textSize="20sp"/>
     
     <RelativeLayout
