--- a/app/src/main/res/layout/dialog_confirm_password.xml
+++ b/app/src/main/res/layout/dialog_confirm_password.xml
@@ -1,43 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="250dp"
-    android:layout_height="wrap_content"
-    android:padding="10dp">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rell2"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <RelativeLayout
+        android:id="@+id/solidcolorrel"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:background="@color/pearl_white">
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/emer" />
+    </RelativeLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Please Enter the Status"
-        android:textSize="21sp"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:id="@+id/dialogTitle"/>
-    
-    <EditText
+    <RelativeLayout
+        android:id="@+id/statusrel"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Status"
-        android:id="@+id/confirm_password"
-        android:inputType="text"
-        android:textSize="20sp"/>
-    
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_below="@+id/solidcolorrel">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Please Enter the Status"
+            android:fontFamily="sans-serif-condensed"
+            android:textSize="22sp"
+            android:textColor="@color/black"
+            android:id="@+id/dialogTitle"
+            android:layout_centerHorizontal="true"/>
+
+        <RelativeLayout
+            android:id="@+id/edittextrel"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/dialogTitle"
+            android:background="@drawable/white_rounded_border">
+
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:hint="Status"
+                android:id="@+id/confirm_password"
+                android:inputType="text"
+                android:textSize="16sp"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="10dp"/>
+
+        </RelativeLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
+            android:textStyle="bold"
             android:layout_alignParentRight="true"
-            android:layout_marginTop="30dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginRight="10dp"
             android:text="CONFIRM"
-            android:id="@+id/dialogConfirm"/>
+            android:id="@+id/dialogConfirm"
+            android:background="@drawable/rounded_border_blue"
+            android:padding="5dp"
+            android:layout_below="@id/edittextrel"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"/>
 
     </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
